test/libsolidity/syntaxTests/storageLayoutSpecifier/type_uint_max.sol
contract at layout at type(uint).max { }
// ----
// UnimplementedFeatureError 1834: (0-40): Code generation is not supported for contracts with specified storage layout base.
